--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
     </div>
 
     <div class="footer">
-
+        <div class="footer-content">
+            <h3>(111) 222-333</h3>
+            <h3>email@gmail.com</h3>
+        </div>
     </div>
 </body>
 </html>
