--- a/book.html
+++ b/book.html
@@ -10,16 +10,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
-<body>
+<body class="book-body">
     <div class="header">
         <img src="images/rtg-earl2.png" alt="Rivertown Ghost image" class="rtg-pic">
         <div class="nav-container">
             <div class="nav">
                 <a href="index.html">
-                    <h1 class="selected">Home</h1>
+                    <h1>Home</h1>
                 </a>
                 <a href="book.html">
-                    <h1>Booking Info</h1>
+                    <h1 class="selected">Booking Info</h1>
                 </a>
             </div>
             <div class="socials">
@@ -52,18 +52,6 @@
                 </a>
             </div>
         </div>
-    </div>
-    <div class="image-container">
-        <img class="bf" src="images/beaverfest.jpg">
-        <img class="jake" src="images/jake.jpg">
-        <img class="berkshire" src="images/berkshire.jpg">
-        <img class="jakeandfinn" src="images/jakeandfinn.jpg">
-        <img class="finn" src="images/finn.jpg">
-    </div>
-
-    <div class="shows">
-        <h1>Shows</h1>
-        <div id="cards-container" class="cards-container"></div>
     </div>
 
     <div class="footer">
