--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         <div class="nav-container">
             <div class="nav">
                 <a href="index.html">
-                    <h1 class="selected">Home</h1>
+                    <h1 class="selected mobile-h1">Home</h1>
                 </a>
-                <a href="book.html">
+                <a href="book.html" class="mobile-h1">
                     <h1>Booking Info</h1>
                 </a>
             </div>
